# c-durlib

./: .gitignore  CMakeLists.txt  README.md
c-durlib/src/: main.c
c-durlib/src/log/: log.c  log.h
